# agentic

./: Cargo.toml  README.md
docs/: adapters.md  agents.md  architecture.md  layering.md  schema.md
schema/: agentic.schema.json
src/: cli.rs  context.rs  convert.rs  explain.rs  io.rs  lib.rs  main.rs  merge.rs  output.rs  pipeline.rs  validation.rs
src/adapters/: adapter.rs  claude.rs  codex.rs  mod.rs  registry.rs
src/agents/: agent_def.rs  loader.rs  mod.rs  resolver.rs  skill_def.rs
src/config/: layer.rs  merged.rs  mod.rs
src/tui/: explain.rs  mod.rs
tests/: agent_resolution.rs  context_tests.rs  merge_tests.rs  pipeline_integration.rs  project_detection.rs
