[package]
name = "agentic"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1.0"
serde = { version = "1.0", features = [ "derive"] }
serde_json = "1.0.149"
serde_yaml = "0.9.34"
dirs = "4.0"
tempfile = "3"
hostname = "0.3"
jsonschema = "0.42.1"
